package ex44;

/*
 *  UCF COP3330 Summer 2021 Assignment 3 Solution
 *  Copyright 2021 Stephan Hartig
 */

import lombok.Getter;
import lombok.Setter;

public class Product {
   public String name;
   public float price;
   public int quantity;
}
